resolviendo media cuiree

--- a/index.html
+++ b/index.html
@@ -112,134 +112,163 @@
 <!-- ****************** -->
 <!-- NUESTROS-SERVICIOS -->
 <!-- ****************** -->
-<section id="services">
-  <div class="container">
-
-      <div class="section-header">
-          <h2 class="section-title text-center wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;">NUESTROS SERVICIOs</h2>
-          <p class="text-center wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;">Conocé nuestra variedad de servicios de transporte<br> y elegí el que más se ajuste a tus necesidades.</p>
+<section >
+  <div id="servicios" class="titulo-nuestros-servicios text-center ">
+    <h2>NUESTROS SERVICIOS</h2>
+    <p><i class="bi bi-three-dots"></i> <i class="bi bi-circle-fill"></i> <i class="bi bi-three-dots"></i></p>
+    <p>Conocé nuestra variedad de servicios de transporte <br>
+        y elegí el que más se ajuste a tus necesidades.</p>
+  </div>
+  <div><!--  class="container" -->
+      <div ><!-- class="row" -->
+          <div class="container-informacion">
+            <div class="column">
+              <div>
+                <div class="espacio-entre-informacion">
+                    <div class="icono">
+                      <i class="fa fa-book"></i>
+                    </div>
+                    <div  class="posicion-de-icono-texto">
+                        <h4 >Transporte escolar</h4>
+                        <p>Brindamos un servicio personalizado trasladando alumnos tanto a sus hogares, como a cualquier actividad educativa.</p>
+                    </div>
+                </div>
+            </div><!--/.col-md-4-->
+            <div>
+                <div class="espacio-entre-informacion ">
+                    <div class="icono">
+                        <i class="fa fa-briefcase"></i>
+                    </div>
+                    <div class="posicion-de-icono-texto">
+                        <h4 >Charter para empresas</h4>
+                        <p>Es un servicio muy requerido por las empresas para transportar a su personal desde y hacia la empresa diariamente.</p>
+                    </div>
+                </div>
+            </div><!--/.col-md-4-->
+            <div >
+                <div class="espacio-entre-informacion">
+                    <div class="icono">
+                        <i class="fa fa-camera"></i>
+                    </div>
+                    <div class="posicion-de-icono-texto">
+                        <h4 >Traslados turísticos</h4>
+                        <p>Brindamos servicios de transporte turístico.</p>
+                    </div>
+                </div>
+            </div><!--/.col-md-4-->
+            </div>
+<div class="column2">
+  <div >
+    <div class="espacio-entre-informacion">
+        <div class="icono">
+            <i class="fa fa-calculator"></i>
+        </div>
+        <div class="posicion-de-icono-texto">
+            <h4 >Servicios personalizados</h4>
+            <p>Servicios de transporte a medida de las necesidades de cada cliente.</p>
+        </div>
+    </div>
+</div><!--/.col-md-4-->
+<div >
+  <div class="espacio-entre-informacion">
+      <div class="icono">
+        <i class="fa-solid fa-location-dot" style="color: #ff933b;"></i>
       </div>
-
-      <div class="row">
-          <div class="features">
-              <div class="col-md-6 col-sm-6 wow fadeInUp animated" data-wow-duration="300ms" data-wow-delay="0ms" style="visibility: visible; animation-duration: 300ms; animation-delay: 0ms; animation-name: fadeInUp;">
-                  <div class="media service-box">
-                      <div class="pull-left">
-                          <i class="fa fa-book"></i>
-                      </div>
-                      <div class="media-body">
-                          <h4 class="media-heading">Transporte escolar</h4>
-                          <p>Brindamos un servicio personalizado trasladando alumnos tanto a sus hogares, como a cualquier actividad educativa.</p>
-                      </div>
-                  </div>
-              </div><!--/.col-md-4-->
-
-              <div class="col-md-6 col-sm-6 wow fadeInUp animated" data-wow-duration="300ms" data-wow-delay="100ms" style="visibility: visible; animation-duration: 300ms; animation-delay: 100ms; animation-name: fadeInUp;">
-                  <div class="media service-box">
-                      <div class="pull-left">
-                          <i class="fa fa-briefcase"></i>
-                      </div>
-                      <div class="media-body">
-                          <h4 class="media-heading">Charter para empresas</h4>
-                          <p>Es un servicio muy requerido por las empresas para transportar a su personal desde y hacia la empresa diariamente.</p>
-                      </div>
-                  </div>
-              </div><!--/.col-md-4-->
-
-              <div class="col-md-6 col-sm-6 wow fadeInUp animated" data-wow-duration="300ms" data-wow-delay="200ms" style="visibility: visible; animation-duration: 300ms; animation-delay: 200ms; animation-name: fadeInUp;">
-                  <div class="media service-box">
-                      <div class="pull-left">
-                          <i class="fa fa-camera"></i>
-                      </div>
-                      <div class="media-body">
-                          <h4 class="media-heading">Traslados turísticos</h4>
-                          <p>Brindamos servicios de transporte turístico.</p>
-                      </div>
-                  </div>
-              </div><!--/.col-md-4-->
-
-              <div class="col-md-6 col-sm-6 wow fadeInUp animated" data-wow-duration="300ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 300ms; animation-delay: 300ms; animation-name: fadeInUp;">
-                  <div class="media service-box">
-                      <div class="pull-left">
-                          <i class="fa fa-calculator"></i>
-                      </div>
-                      <div class="media-body">
-                          <h4 class="media-heading">Servicios personalizados</h4>
-                          <p>Servicios de transporte a medida de las necesidades de cada cliente.</p>
-                      </div>
-                  </div>
-              </div><!--/.col-md-4-->
+      <div class="posicion-de-icono-texto">
+          <h4 >Zonas de servicio</h4>
+          <div class="carousel-item active gallery-block compact-gallery ">
+            <p>Servicios en todo Capital Federal y alrededores. <br> <a href="./imagenes/buenosairesprovincia.jpg">Ver mapa</a></p>
+        </div>
+      </div>
+  </div>
+</div><!--/.col-md-4-->
+</div>
           </div>
       </div><!--/.row-->
   </div><!--/.container-->
 </section>
 
 <!-- ESTAS-INTERESADO-EN-ALGUNO-DE-NUESTROS-SERVICIOS -->
-  <section class="ESTAS-INTERESADO-EN-ALGUNO-DE-NUESTROS-SERVICIOS">
-    <div class="container">
+  <div class="ESTAS-INTERESADO-EN-ALGUNO-DE-NUESTROS-SERVICIOS">
+    <div class="ubicacion">
         <div class="text-center">
-            <h2 style="font-family: 'Roboto', sans-serif; font-size: 44px; font-weight: 600;">¿ESTÁS INTERESADO EN ALGUNO DE NUESTROS SERVICIOS?</h2>
-            <p style="font-family: 'Roboto', sans-serif; font-weight: 600;">Aprovechá y envianos tu pedido. Un representante de Transporte-Raul se contactará a la brevedad.</p>
+            <h2>¿ESTÁS INTERESADO EN ALGUNO DE NUESTROS SERVICIOS?</h2>
+            <p >Aprovechá y envianos tu pedido. Un representante de Transporte-Raul se contactará a la brevedad.</p>
             <p><a class="btn btn-primary " href="https://api.whatsapp.com/send?phone=34315499&text=Hola%20sean%20vienvenidos!" target="_blank">REALIZAR PEDIDO</a></p>
         </div>
     </div>
-</section>
+</div>
 
 
 <!-- ******************** -->
 <!-- LA SEGURIDAD PRIMERO -->
 <!-- ******************** -->
 <div id="seguridad-primero" class="titulo-nuestros-servicios text-center">
-    <h2>LA SEGURIDAD PRIMERO</h2>
-    <p><i class="bi bi-three-dots"></i> <i class="bi bi-circle-fill"></i> <i class="bi bi-three-dots"></i></p>
-    <p>Todos nuestros vehículos se encuentran habilitados para la actividad de transporte de corta y larga distancia. <br>
-        Cumplen con los estándares de seguridad más exigentes.
-        </p>
-</div>
-<div class="container-informacion">
-    <div class="column">
-        <div>
-            <div class="icono">
-                <i class="fa fa-book"></i>
-            </div>
-            <div class="titulo-y-parrafo">
-              <h2>Personal Capacitado</h2>
-              <p>El personal se encuentra altamente capacitado  <br> para realizar sus tareas.</p>
-            </div>
+  <h2>LA SEGURIDAD PRIMERO</h2>
+      <p><i class="bi bi-three-dots"></i> <i class="bi bi-circle-fill"></i> <i class="bi bi-three-dots"></i></p>
+      <p>Todos nuestros vehículos se encuentran habilitados para la actividad de transporte de corta y larga distancia. <br>
+          Cumplen con los estándares de seguridad más exigentes.
+          </p>
+  </div>
+  <section>
+    <div><!--  class="container" -->
+        <div ><!-- class="row" -->
+            <div class="container-informacion">
+              <div class="column">
+                <div>
+                  <div class="espacio-entre-informacion">
+                      <div class="icono">
+                      <i class="fa fa-book"></i>
+                      </div>
+                      <div  class="posicion-de-icono-texto">
+                          <h4 >Personal Capacitado</h4>
+                          <p>El personal se encuentra altamente capacitado para realizar sus tareas.</p>
+                      </div>
+                  </div>
+              </div><!--/.col-md-4-->
+  
+              <div>
+                  <div class="espacio-entre-informacion ">
+                      <div class="icono">
+                        <i class="fa fa-university"></i>
+                      </div>
+                      <div class="posicion-de-icono-texto">
+                          <h4 >Reglamentación Vigente</h4>
+                          <p>Todas las unidades cuentan con la reglamentación vigente, respetando los controles impuestos por la normativa actual, como también cuentan con las medidas básicas de seguridad.</p>
+                      </div>
+                  </div>
+              </div><!--/.col-md-4-->
+              </div>
+  <div class="column2">
+    <div>
+      <div class="espacio-entre-informacion">
+          <div class="icono">
+            <i class="fa fa-rss"></i>
           </div>
-          <div class="mt-5">
-            <div class="icono">
-                <i class="fa fa-university"></i>
-            </div>
-            <div class="titulo-y-parrafo">
-              <h2>Reglamentación Vigente</h2>
-              <p>Todas las unidades cuentan con la reglamentación <br> vigente, respetando los controles impuestos por <br> la normativa actual, como también cuentan <br> con las medidas básicas de seguridad.</p>
-            </div>
+          <div class="posicion-de-icono-texto">
+              <h4 >Seguimiento Satelital en Tiempo Real</h4>
+              <p>Es un servicio que incorporamos a todas nuestras unidades para que los pasajeros se sientan cada vez más seguros.</p>
           </div>
-    </div>
-    <div class="column2">
-        <div>
-            <div class="icono">
-                <i class="fa fa-rss"></i>
+      </div>
+  </div><!--/.col-md-4-->
+  <div >
+                  <div class="espacio-entre-informacion">
+                      <div class="icono">
+                        <i class="fa fa-bullhorn"></i>
+                      </div>
+                      <div class="posicion-de-icono-texto">
+                          <h4 >Comunicación</h4>
+                          <p>Nuestras unidades se encuentran intercomunicadas a través de un sistema propio de la organización.</p>
+                      </div>
+                  </div>
+              </div><!--/.col-md-4-->
+  </div>
             </div>
-            <div class="titulo-y-parrafo">
-              <h2>Seguimiento Satelital en Tiempo Real</h2>
-              <p>Es un servicio que incorporamos a todas nuestras unidades <br> para que los pasajeros se sientan cada vez más seguros.</p>
-            </div>
-          </div> 
-          <div  class="mt-5">
-            <div class="icono">
-                <i class="fa fa-bullhorn"></i>
-            </div>
-            <div class="titulo-y-parrafo">
-              <h2>Comunicación</h2>
-              <p>Nuestras unidades se encuentran intercomunicadas <br> a través de un sistema propio de la organización.</p>
-            </div>
-          </div>
-    </div>
-</div>
+        </div><!--/.row-->
+    </div><!--/.container-->
+  </section>
   <!-- CODIGO DE CONDUCTA PARA MAYOR SEGURIDAD -->
-  <div id="conducta" class="container fondo-codigo-conducta p-5 mb-5">
+  <div id="conducta" class="container fondo-codigo-conducta p-5">
     <h2 class="text-center informacionUtil mb-5">Codigos de conducta para mayor seguridad</h2>
     <div class="conducta-container">
         <svg xmlns="http://www.w3.org/2000/svg" width="300" height="300" fill="currentColor"
@@ -291,10 +320,10 @@
       <p>Contamos con una amplia, moderna y equipada flota.</p>
   </div>
   
-  <div class="row">
+  <div class="row columna-unidades">
       <div class="col">
           <div class="imagen-hover">
-              <a href="./secciones/unidad-franco.html" target="_blank" rel="noopener noreferrer"><img src="./imagenes/micro-franco/imagen-1.jpeg" class="d-block w-100 imgagen-vehiculos-zonas-servicios imagen-hover-link" alt="...">
+              <a href="./secciones/unidad-franco.html" target="_blank" rel="noopener noreferrer"><img src="./imagenes/micro-franco/imagen-1.jpeg" class="d-block w-100 imagen-hover-link" alt="...">
                <div class="boton-centro">
                    <i class="fa fa-plus fa-3x"></i>
                   </div>
@@ -304,7 +333,7 @@
 
       <div class="col">
           <div class="imagen-hover">
-              <a href="./secciones/unidad-lucas.html" target="_blank" rel="noopener noreferrer"><img src="./imagenes/micro-lucas/micro-lucas(1).jpeg" class="d-block w-100 imgagen-vehiculos-zonas-servicios imagen-hover-link" alt="...">
+              <a href="./secciones/unidad-lucas.html" target="_blank" rel="noopener noreferrer"><img src="./imagenes/micro-lucas/micro-lucas(1).jpeg" class="d-block w-100 imagen-hover-link" alt="...">
                <div class="boton-centro">
                    <i class="fa fa-plus fa-3x"></i>
                   </div>
@@ -314,7 +343,7 @@
 
       <div class="col">
           <div class="imagen-hover">
-              <a href="./secciones/unidad-mama.html" target="_blank" rel="noopener noreferrer"><img src="./imagenes/micro-carolina/micro-mama(1).jpeg" class="d-block w-100 imgagen-vehiculos-zonas-servicios imagen-hover-link" alt="...">
+              <a href="./secciones/unidad-mama.html" target="_blank" rel="noopener noreferrer"><img src="./imagenes/micro-carolina/micro-mama(1).jpeg" class="d-block w-100 imagen-hover-link" alt="...">
                <div class="boton-centro">
                    <i class="fa fa-plus fa-3x"></i>
                   </div>
@@ -324,7 +353,7 @@
 
       <div class="col">
           <div class="imagen-hover">
-             <a href="./secciones/unidad-dami.html" target="_blank" rel="noopener noreferrer"><img src="./imagenes/auto-damian/auto-dami(1).jpeg" class="d-block w-100 imgagen-vehiculos-zonas-servicios imagen-hover-link" alt="...">
+             <a href="./secciones/unidad-dami.html" target="_blank" rel="noopener noreferrer"><img src="./imagenes/auto-damian/auto-dami(1).jpeg" class="d-block w-100 imagen-hover-link" alt="...">
               <div class="boton-centro">
                   <i class="fa fa-plus fa-3x"></i>
                  </div>
@@ -366,7 +395,7 @@
             <div class="titulo-y-parrafo">
               <h2>TRADICION DE DOS GENERACIONES</h2>
               <p class="linea-nuestra-trayectoria">____________________</p>
-              <p>Transporte Escolar es una empresa de una tradición familiar <br> que ya va por la 2da generación realizando la misma actividad <br> con mucha pasión y entrega.
+              <p >Transporte Escolar es una empresa de una tradición familiar <br> que ya va por la 2da generación realizando la misma actividad <br> con mucha pasión y entrega.
               </p>
             </div>
           </div>
@@ -374,11 +403,12 @@
     <div class="column2">
         <div>
             <div class="titulo-y-parrafo pt-4">
-              <p class="pt-5">Con más de 20 años de experiencia en el sector, ofrecemos servicios de alta calidad y personalizados a cada uno de nuestros clientes. Nuestro objetivo es brindar la mejor experiencia posible de transporte escolar para los estudiantes y sus familias.</p>
+              <p class="pt-5 parrafo-2">Con más de 20 años de experiencia en el sector, ofrecemos servicios de alta calidad y personalizados a cada uno de nuestros clientes. Nuestro objetivo es brindar la mejor experiencia posible de transporte escolar para los estudiantes y sus familias.</p>
             </div>
         </div>
     </div>
 </div>
+
 
 <!--*****************-->
 <!-- NUESTROS VALORES -->
@@ -387,31 +417,27 @@
     <div class="mb-5 text-center">
         <h2>NUESTROS VALORES</h2>
         <p><i class="bi bi-three-dots"></i> <i class="bi bi-circle-fill"></i> <i class="bi bi-three-dots"></i></p>
-        <p>Cincuenta años haciendo lo que mejor sabemos</p>
+        <p class="p-valores">Cincuenta años haciendo lo que mejor sabemos</p>
     </div>
     <div class="iconos">
-
       <div class="icono-valores text-center">
         <div class="icon-circle">
             <i class="fa fa-heart fa-2x"></i>
         </div>
         <h3>Pasión por lo que hacemos</h3>
       </div>
-
       <div class="icono-valores text-center">
         <div class="icon-circle">
             <i class="fa fa-lock fa-2x"></i>
         </div>
         <h3>Seguridad integral y cuidado de nuestros clientes</h3>
       </div>
-
       <div class="icono-valores text-center">
         <div class="icon-circle">
             <i class="fas fa-clock"></i>
         </div>
         <h3>Profesionalismo para cumplir con nuestro servicio</h3>
       </div>
-
       <div class="icono-valores text-center">
         <div class="icon-circle">
             <i class="fas fa-code-branch"></i>
@@ -461,7 +487,7 @@
     <div class="title">
     </div>
     <div class="row">
-      <div class="col lineaDerecha">
+      <div class="col columna-personal lineaDerecha">
         <div class="circle ">
           <img class="tutu" src="./imagenes/colito.jpeg" alt="Franco">
           <ul class="nav-item dropdown">
