--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 <!--*****************-->
 <!-- NUESTROS VALORES -->
 <!--*****************-->
-<div id="nuestros-valores" class="contenedori">
+<div id="nuestros-valores" class="contenedori text-center">
     <div class="mb-5 text-center">
         <h2>NUESTROS VALORES</h2>
         <p><i class="bi bi-three-dots"></i> <i class="bi bi-circle-fill"></i> <i class="bi bi-three-dots"></i></p>
@@ -575,9 +575,6 @@
 </div>
 
 
-
-
-
 <!--********-->
 <!-- FOOTER -->
 <!--********-->
@@ -593,8 +590,9 @@
         <p class="text-center"><i class="fa fa-map-marker text-white" aria-hidden="true"></i> Lunes a Sabado de 7 a 21hs.</p>
     </div>
     <!-- contacto -->
-    <div class="columna container-fluid">
-      <h5 class="text-center mb-3 container-fluid">CONTACTOS</h5>
+    <div class="columna">
+      <div class="linea-solicitar-informacion" >
+        <h5 class="text-center mb-3 container-fluid">CONTACTOS</h5>
       <div class="logos-contacto text-center">
         <ul>
             <li>
@@ -609,6 +607,7 @@
             <li>
               <a href="#"><i class="fa-solid fa-envelope icon"></i></a></li>
           </ul>
+      </div>
       </div>
       <div class="text-center contacto-gmail">
         <a href="mailto:?to=robledof817@gmail.com" target="_blank" rel="noopener noreferrer" class="text-decoration-none text-white"><i
