--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="inicio" id="inicio ">
         <div class=" fixed-top">
             <nav class="navbar navbar-expand-lg fondo-del-nav ">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="navbar-toggler hamburger " type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
