--- a/secciones/unidad-dami.html
+++ b/secciones/unidad-dami.html
@@ -29,30 +29,26 @@
 </head>
 <body>
 
-        <!--I N I C I O -->
-<div class="inicio-unidad">
-    <div class="fondo-unidad-dami" id="inicio">
-        <div class="container-fluid text-center fs-4 fondo-superiro-navbar ">
-            <div class="container ">
-                <div>
-                    <div class="submenu-principal text-center posicion-letras">
-                        <a href="tel:+1126428286" target="_blank" rel="noopener noreferrer"
-                            class="text-decoration-none text-white ms-5 "><i class="fa-solid fa-phone hover-fondo-superior">
-                                11 2642 - 8286</i></a>
-                        <a href="https://api.whatsapp.com/send?phone=26428286&text=Hola%20sean%20vienvenidos!" target="_blank" rel="noopener noreferrer"
-                            class="text-decoration-none text-white ms-5"><i
-                                class="fa-brands fa-whatsapp hover-fondo-superior"> 11 3431 - 5499</i></a>
-                        <a href="mailto:?to=robledof817@gmail.com" target="_blank" rel="noopener noreferrer" class="text-decoration-none text-white ms-5"><i
-                                class="fa-solid fa-envelope hover-fondo-superior"> robledof817@gmail.com</i></a>
-                        <a href="#" class="text-decoration-none text-white ms-5"><i
-                                class="fa-solid fa-clock hover-fondo-superior"> Horario de atencion: 07:00 - 21:00</i> </a>
-                    </div>
-                </div>
-            </div>
-        </div>
+<!--SUBMENU-PRINCIPAL -->
+<nav class="menu text-center">
+    <ol>
+      <li><a href="tel:+1126428286" target="_blank" rel="noopener noreferrer"
+        class="text-decoration-none text-white"><i class="fa-solid fa-phone hover-fondo-superior">
+            11 2642 - 8286</i></a></li>
+      <li><a href="https://api.whatsapp.com/send?phone=34315499&text=Hola%20sean%20vienvenidos!" target="_blank" rel="noopener noreferrer"
+        class="text-decoration-none text-white"><i
+            class="fa-brands fa-whatsapp hover-fondo-superior"> 11 3431 - 5499</i></a></li>
+      <li><a href="mailto:?to=robledof817@gmail.com" target="_blank" rel="noopener noreferrer" class="text-decoration-none text-white"><i
+        class="fa-solid fa-envelope hover-fondo-superior"> robledof817@gmail.com</i></a></li>
+      <li> <a href="#" class="text-decoration-none text-white"><i
+        class="fa-solid fa-clock hover-fondo-superior"> Horario de atencion: 07:00 - 21:00</i> </a></li>
+    </ol>
+  </nav>
+    <!--I N I C I O -->
+    <div class="inicio fondo-unidad-dami" id="inicio ">
         <div class=" fixed-top">
             <nav class="navbar navbar-expand-lg fondo-del-nav ">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="navbar-toggler hamburger " type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -64,33 +60,33 @@
                     <div class=" collapse navbar-collapse posicion-nav " id="navbarSupportedContent">
                         <ul class="navbar-nav ">
                             <li class="nav-item">
-                                <a class="nav-link diseño-texto-navbar" href="../index.html#servicios" rel="noopener noreferrer">SERVICIOS</a>
+                                <a class="nav-link diseño-texto-navbar " href="#servicios" rel="noopener noreferrer">SERVICIOS</a>
                             </li>
                             <li class="nav-item ">
-                                <a class="nav-link  diseño-texto-navbar" href="../index.html#seguridad-primero" rel="noopener noreferrer">SEGURIDAD</a>
+                                <a class="nav-link  diseño-texto-navbar" href="#seguridad-primero" rel="noopener noreferrer">SEGURIDAD</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link diseño-texto-navbar" href="../index.html#unidades" rel="noopener noreferrer">UNIDADES</a>
-                            </li>
+                              <a class="nav-link diseño-texto-navbar" href="#unidades" rel="noopener noreferrer">UNIDADES</a>
+                          </li>
                             <li class="nav-item ">
-                                <a class="nav-link  diseño-texto-navbar" href="../index.html#trayectoria" rel="noopener noreferrer">TRAYECTORIA</a>
+                                <a class="nav-link  diseño-texto-navbar" href="#trayectoria" rel="noopener noreferrer">TRAYECTORIA</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../index.html"><img width="130" height="60"
-                                        class="logo-tutuca " src="../imagenes/logo transporte escolar.png"
+                                <a class="nav-link" href="#"><img width="130" height="60"
+                                        class="logo-transporte-escolar " src="../imagenes/logo transporte escolar.png"
                                         alt="Logo"></a>
                             </li>
                             <li class="nav-item ">
-                                <a class="nav-link  diseño-texto-navbar" href="../index.html#nuestros-valores" rel="noopener noreferrer">NUESTROS VALORES</a>
+                                <a class="nav-link diseño-texto-navbar" href="#nuestros-valores" rel="noopener noreferrer">NUESTROS VALORES</a>
                             </li>
                             <li class="nav-item ">
-                                <a class="nav-link  diseño-texto-navbar" href="../index.html#clientes" rel="noopener noreferrer">CLIENTES</a>
+                                <a class="nav-link diseño-texto-navbar" href="#clientes" rel="noopener noreferrer">CLIENTES</a>
                             </li>
                             <li class="nav-item ">
-                                <a class="nav-link  diseño-texto-navbar" href="../index.html#personal" rel="noopener noreferrer">PERSONAL</a>
+                                <a class="nav-link diseño-texto-navbar" href="#personal" rel="noopener noreferrer">PERSONAL</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link  diseño-texto-navbar" href="#contactar" rel="noopener noreferrer">CONTACTAR</a>
+                                <a class="nav-link diseño-texto-navbar" href="#contactar" rel="noopener noreferrer">CONTACTAR</a>
                             </li>
                         </ul>
                     </div>
@@ -98,7 +94,7 @@
             </nav>
         </div>
         <div class="contenido">
-            <div class="presentacion">
+            <div class="presentacion"> 
                 <h2>FIAT CRONOS</h2>
                 <h5>CARACTERÍSTICAS</h5>
                 <div class="informacion-unidad">
@@ -113,7 +109,6 @@
             </div>
         </div>
     </div>
-</div> 
     
 
 <!-- ******************* -->
@@ -200,8 +195,9 @@
         <p class="text-center"><i class="fa fa-map-marker text-white" aria-hidden="true"></i> Lunes a Sabado de 7 a 21hs.</p>
     </div>
     <!-- contacto -->
-    <div class="columna container-fluid">
-      <h5 class="text-center mb-3 container-fluid">CONTACTOS</h5>
+    <div class="columna">
+      <div class="linea-solicitar-informacion" >
+        <h5 class="text-center mb-3 container-fluid">CONTACTOS</h5>
       <div class="logos-contacto text-center">
         <ul>
             <li>
@@ -216,6 +212,7 @@
             <li>
               <a href="#"><i class="fa-solid fa-envelope icon"></i></a></li>
           </ul>
+      </div>
       </div>
       <div class="text-center contacto-gmail">
         <a href="mailto:?to=robledof817@gmail.com" target="_blank" rel="noopener noreferrer" class="text-decoration-none text-white"><i
