--- a/secciones/unidad-franco.html
+++ b/secciones/unidad-franco.html
@@ -60,30 +60,30 @@
                     <div class=" collapse navbar-collapse posicion-nav " id="navbarSupportedContent">
                         <ul class="navbar-nav ">
                             <li class="nav-item">
-                                <a class="nav-link diseño-texto-navbar " href="#servicios" rel="noopener noreferrer">SERVICIOS</a>
+                                <a class="nav-link diseño-texto-navbar " href="../index.html#servicios" rel="noopener noreferrer">SERVICIOS</a>
                             </li>
                             <li class="nav-item ">
-                                <a class="nav-link  diseño-texto-navbar" href="#seguridad-primero" rel="noopener noreferrer">SEGURIDAD</a>
+                                <a class="nav-link  diseño-texto-navbar" href="../index.html#seguridad-primero" rel="noopener noreferrer">SEGURIDAD</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link diseño-texto-navbar" href="#unidades" rel="noopener noreferrer">UNIDADES</a>
+                              <a class="nav-link diseño-texto-navbar" href="../index.html#unidades" rel="noopener noreferrer">UNIDADES</a>
                           </li>
                             <li class="nav-item ">
-                                <a class="nav-link  diseño-texto-navbar" href="#trayectoria" rel="noopener noreferrer">TRAYECTORIA</a>
+                                <a class="nav-link  diseño-texto-navbar" href="../index.html#trayectoria" rel="noopener noreferrer">TRAYECTORIA</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#"><img width="130" height="60"
+                                <a class="nav-link" href="../"><img width="130" height="60"
                                         class="logo-transporte-escolar " src="../imagenes/logo transporte escolar.png"
                                         alt="Logo"></a>
                             </li>
                             <li class="nav-item ">
-                                <a class="nav-link diseño-texto-navbar" href="#nuestros-valores" rel="noopener noreferrer">NUESTROS VALORES</a>
+                                <a class="nav-link diseño-texto-navbar" href="../index.html#nuestros-valores" rel="noopener noreferrer">NUESTROS VALORES</a>
                             </li>
                             <li class="nav-item ">
-                                <a class="nav-link diseño-texto-navbar" href="#clientes" rel="noopener noreferrer">CLIENTES</a>
+                                <a class="nav-link diseño-texto-navbar" href="../index.html#clientes" rel="noopener noreferrer">CLIENTES</a>
                             </li>
                             <li class="nav-item ">
-                                <a class="nav-link diseño-texto-navbar" href="#personal" rel="noopener noreferrer">PERSONAL</a>
+                                <a class="nav-link diseño-texto-navbar" href="../index.html#personal" rel="noopener noreferrer">PERSONAL</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link diseño-texto-navbar" href="#contactar" rel="noopener noreferrer">CONTACTAR</a>
