--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
       </div>
       <div class="col lineaDerecha">
         <div class="circle">
-          <img class="tutu" src="./imagenes/bomba.jpeg" alt="Franco">
+          <img class="tutu" src="./imagenes/CAROLINA.jpeg" alt="Franco">
           <ul class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 GLADYS ROBLEDO
@@ -551,7 +551,7 @@
       </div>
       <div class="col">
         <div class="circle">
-          <img class="tutu" src="./imagenes/dami.jpeg" alt="Franco">
+          <img class="tutu" src="./imagenes/dami - copia.jpeg" alt="Franco">
           <ul class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 DAMIAN CASTANO
