--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                 <li>Edad: 23 años</li>
                 <li>Vehiculo: Fiat Cronos</a></li>
                 <div class="imagen-hover">
-                  <a href="./secciones/unidad-dami.html" target="_blank" rel="noopener noreferrer"><img src="./contenido-multimedia/fiat cronos.webp" alt="">
+                  <a href="./secciones/unidad-dami.html" target="_blank" rel="noopener noreferrer"><img src="./imagenes/auto-damian/auto-dami(1).jpeg" alt="">
                    <div class="boton-centro">
                        <i class="fa fa-plus fa-3x"></i>
                       </div>
