--- a/secciones/unidad-mama.html
+++ b/secciones/unidad-mama.html
@@ -72,7 +72,7 @@
                                 <a class="nav-link  diseño-texto-navbar" href="../index.html#trayectoria" rel="noopener noreferrer">TRAYECTORIA</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../"><img width="130" height="60"
+                                <a class="nav-link" href="../index.html"><img width="130" height="60"
                                         class="logo-transporte-escolar " src="../imagenes/logo transporte escolar.png"
                                         alt="Logo"></a>
                             </li>
