--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                 </div>
             </nav>
         </div>
+        
         <div class="contenido ">
             <div class="presentacion">
                 <div class="linea-presentacion">_______________________</div>
@@ -119,8 +120,8 @@
     <p>Conocé nuestra variedad de servicios de transporte <br>
         y elegí el que más se ajuste a tus necesidades.</p>
   </div>
-  <div><!--  class="container" -->
-      <div ><!-- class="row" -->
+  <div>
+      <div >
           <div class="container-informacion">
             <div class="column">
               <div>
@@ -133,7 +134,7 @@
                         <p>Brindamos un servicio personalizado trasladando alumnos tanto a sus hogares, como a cualquier actividad educativa.</p>
                     </div>
                 </div>
-            </div><!--/.col-md-4-->
+            </div>
             <div>
                 <div class="espacio-entre-informacion ">
                     <div class="icono">
@@ -144,7 +145,7 @@
                         <p>Es un servicio muy requerido por las empresas para transportar a su personal desde y hacia la empresa diariamente.</p>
                     </div>
                 </div>
-            </div><!--/.col-md-4-->
+            </div>
             <div >
                 <div class="espacio-entre-informacion">
                     <div class="icono">
@@ -155,7 +156,7 @@
                         <p>Brindamos servicios de transporte turístico.</p>
                     </div>
                 </div>
-            </div><!--/.col-md-4-->
+            </div>
             </div>
 <div class="column2">
   <div >
@@ -168,7 +169,7 @@
             <p>Servicios de transporte a medida de las necesidades de cada cliente.</p>
         </div>
     </div>
-</div><!--/.col-md-4-->
+</div>
 <div >
   <div class="espacio-entre-informacion">
       <div class="icono">
@@ -181,11 +182,11 @@
         </div>
       </div>
   </div>
-</div><!--/.col-md-4-->
+</div>
 </div>
           </div>
-      </div><!--/.row-->
-  </div><!--/.container-->
+      </div>
+  </div>
 </section>
 
 <!-- ESTAS-INTERESADO-EN-ALGUNO-DE-NUESTROS-SERVICIOS -->
@@ -211,8 +212,8 @@
           </p>
   </div>
   <section>
-    <div><!--  class="container" -->
-        <div ><!-- class="row" -->
+    <div>
+        <div>
             <div class="container-informacion">
               <div class="column">
                 <div>
@@ -225,7 +226,7 @@
                           <p>El personal se encuentra altamente capacitado para realizar sus tareas.</p>
                       </div>
                   </div>
-              </div><!--/.col-md-4-->
+              </div>
   
               <div>
                   <div class="espacio-entre-informacion ">
@@ -237,7 +238,7 @@
                           <p>Todas las unidades cuentan con la reglamentación vigente, respetando los controles impuestos por la normativa actual, como también cuentan con las medidas básicas de seguridad.</p>
                       </div>
                   </div>
-              </div><!--/.col-md-4-->
+              </div>
               </div>
   <div class="column2">
     <div>
@@ -250,8 +251,8 @@
               <p>Es un servicio que incorporamos a todas nuestras unidades para que los pasajeros se sientan cada vez más seguros.</p>
           </div>
       </div>
-  </div><!--/.col-md-4-->
-  <div >
+  </div>
+  <div>
                   <div class="espacio-entre-informacion">
                       <div class="icono">
                         <i class="fa fa-bullhorn"></i>
@@ -261,11 +262,11 @@
                           <p>Nuestras unidades se encuentran intercomunicadas a través de un sistema propio de la organización.</p>
                       </div>
                   </div>
-              </div><!--/.col-md-4-->
+              </div>
   </div>
             </div>
-        </div><!--/.row-->
-    </div><!--/.container-->
+        </div>
+    </div>
   </section>
   <!-- CODIGO DE CONDUCTA PARA MAYOR SEGURIDAD -->
   <div id="conducta" class="container fondo-codigo-conducta p-5">
@@ -311,7 +312,7 @@
 
 
 <!--*****************-->
-<!--NUESTRAS UNIDADES -->
+<!--NUESTRAS UNIDADES-->
 <!--*****************-->
 <div id="unidades" class="NUESTRAS-UNIDADES">
   <div class="mb-5 text-center">
@@ -636,10 +637,12 @@
 </div>
 
 
+
+
     <!-- whatsapp -->
     <div>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-        <a href="https://api.whatsapp.com/send?phone=26428286&text=Hola%20sean%20vienvenidos!" class="float"
+        <a href="https://api.whatsapp.com/send?phone=26428286&text=Hola%20sean%20Bienvenidos!" class="float"
             target="_blank" rel="noopener noreferrer">
             <i class="fa fa-whatsapp my-float"></i>
         </a>
