--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
             </ul>
         </div>
       </div>
-      <div class="col lineaDerecha">
+      <div class="col">
         <div class="circle">
           <img class="tutu" src="./imagenes/CAROLINA.jpeg" alt="Franco">
           <ul class="nav-item dropdown">
@@ -550,7 +550,7 @@
             </ul>
         </div>
       </div>
-      <div class="col">
+      <!-- <div class="col">
         <div class="circle">
           <img class="tutu" src="./imagenes/dami - copia.jpeg" alt="Franco">
           <ul class="nav-item dropdown">
@@ -570,7 +570,7 @@
               </ul>
             </ul>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
@@ -633,12 +633,8 @@
     <p class="text-white text-center">© Copyright TRANSPORTE-RAUL. Todos los derechos
         reservados/
         Diseño web: gonzarobledo96@gmail.com
-        TRANSPORTE-RAUL 2023</p>
+        TRANSPORTE-RAUL 2024</p>
 </div>
-
-
-
-
     <!-- whatsapp -->
     <div>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
