--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
             <div class="titulo-y-parrafo">
               <h2>TRADICION DE DOS GENERACIONES</h2>
               <p class="linea-nuestra-trayectoria">____________________</p>
-              <p >Transporte Escolar es una empresa de una tradición familiar <br> que ya va por la 2da generación realizando la misma actividad <br> con mucha pasión y entrega.
+              <p >Transporte Escolar es una empresa con una tradición familiar <br> que ya va por la 2da generación realizando la misma actividad <br> con mucha pasión y entrega.
               </p>
             </div>
           </div>
